--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -3,7 +3,7 @@
     height: 70px;
     background: #F1F1F1;
     z-index: 99;
-    position: sticky;
+    position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
