--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -26,7 +26,7 @@
     color: var(--tg-theme-text-color);
     height: 24px;
     width: 24px;
-    margin-bottom: 5px;
+    /* margin-bottom: 5px; */
 }
 .Header__back:visited{
     color: inherit;
