--- a/src/Styles/Global.css
+++ b/src/Styles/Global.css
@@ -34,8 +34,8 @@ h1, h2, h3, h4, h5, h6 { font-size: inherit; font-weight: 400; }
 
 
 body {
-  background-color: var(--tg-theme-bg-color);
-  color: var(--tg-theme-text-color);
+  /* background-color: var(--tg-theme-bg-color);
+  color: var(--tg-theme-text-color); */
   margin: 0 auto;
   font-family: 'Montserrat', sans-serif;
   height: 100%;
