--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,23 @@
-.App{
-    min-height: 100%;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&family=Raleway&display=swap');
+
+
+
+
+
+
+
+
+.App {
+  max-width: 28rem;
+  background-color: var(--tg-theme-bg-color);
+  color: var(--tg-theme-text-color);
+  font-family: 'Montserrat', sans-serif;
+  min-height: 100vh;
+  margin: 0 auto;
+  overflow: hidden;
 }
+
+.container{
+  padding: 0 1rem;
+}
+
