--- a/src/Styles/Global.css
+++ b/src/Styles/Global.css
@@ -10,7 +10,7 @@ a:focus, a:active { outline: none; }
 
 nav, footer, header, aside { display: block; }
 
-html, body { height: 100%; width: 100%; font-size: 100%; line-height: 1; font-size: 14px; -ms-text-size-adjust: 100%; -moz-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; }
+html, body {overflow: hidden; height: 100%; width: 100%; font-size: 100%; line-height: 1; font-size: 14px; -ms-text-size-adjust: 100%; -moz-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; }
 
 input, button, textarea { font-family: inherit; }
 
@@ -33,16 +33,3 @@ h1, h2, h3, h4, h5, h6 { font-size: inherit; font-weight: 400; }
 
 
 
-body {
-  /* background-color: var(--tg-theme-bg-color);
-  color: var(--tg-theme-text-color); */
-  margin: 0 auto;
-  font-family: 'Montserrat', sans-serif;
-  height: 100%;
-  max-width: 375px;
-}
-
-.container {
-  max-width: 375px;
-  margin: 0 auto;
-}
