--- a/src/pages/Products/Products.css
+++ b/src/pages/Products/Products.css
@@ -24,7 +24,7 @@ color: inherit;
     /* padding: 0px 10px; */
     position: sticky;
     top: 0;
-    background-color: #FFFFFFBF;
+    /* background-color: #FFFFFFBsF; */
     height: 40px;
     z-index: 999;
     overflow-x:auto;
@@ -40,10 +40,13 @@ color: inherit;
     display: inline-block;
     padding: 7px 15px;
     border-radius: 20px;
-    color: #616176;
+    /* color: #616176; */
+    color: var(--tg-theme-hint-color);
 }
 
 .active{
-    background-color: #F1F1F6;
-    color: #0C0C1B;
+    /* background-color: #F1F1F6; */
+    background-color: var(--tg-theme-secondary-bg-color);
+    /* color: #0C0C1B; */
+    color: var(--tg-theme-text-color);
 }
