--- a/src/Styles/Global.css
+++ b/src/Styles/Global.css
@@ -10,7 +10,7 @@ a:focus, a:active { outline: none; }
 
 nav, footer, header, aside { display: block; }
 
-html, body {overflow: hidden; height: 100%; width: 100%; font-size: 100%; line-height: 1; font-size: 14px; -ms-text-size-adjust: 100%; -moz-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; }
+html, body { height: 100%;  font-size: 100%; line-height: 1; font-size: 14px; -ms-text-size-adjust: 100%; -moz-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; }
 
 input, button, textarea { font-family: inherit; }
 
