--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -1,7 +1,8 @@
 .navigation{
     width: 100%;
     height: 70px;
-    background: #F1F1F1;
+    /* background: #F1F1F1; */
+    background-color: var(--tg-theme-secondary-bg-color);
     z-index: 99;
     position: fixed;
     bottom: 0;
@@ -30,12 +31,14 @@
 .navigation__img{
     min-width: 24px;
     min-height: 24px;
-    color:  #C4C4C4;
+    /* color:  #C4C4C4; */
+    color: var(--tg-theme-hint-color);
     
 }
 
 .navigation__col.active .navigation__img{
-    color: #17975C !important;
+    /* color: #17975C !important; */
+    color: var(--tg-theme-secondary-bg-color);
 }
 
 .navigation__text{
@@ -44,17 +47,18 @@ font-weight: 500;
 line-height: 15px;
 letter-spacing: 0em;
 text-align: center;
-color: #010E38;
 
 }
 
 .badge span{
     font-size: 9px;
-    background-color: #000;
+    /* background-color: #000; */
+    background-color: var(--tg-theme-secondary-bg-color);
     min-width: 17px;
     padding: 0;
     height: 17px;
     line-height: normal;
     border-radius: 50%;
-    color: #ffffff !important;
+    /* color: #ffffff !important; */
+    color: var(--tg-theme-text-color);
 }
