--- a/src/components/ProductItem/ProductItem.css
+++ b/src/components/ProductItem/ProductItem.css
@@ -70,7 +70,7 @@
 }
 .productItem-footer button{
     /* background-color: #E9E9EA; */
-    background-color: var(--tg-theme-secondary-bg-color);
+    background-color:  rgb(241 244 246/var(--tw-bg-opacity));
     display: inline-block;
     padding: 9px 18px;
     cursor: pointer;
