--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@
 
 .App {
   max-width: 28rem;
-  background-color: var(--tg-theme-bg-color);
-  color: var(--tg-theme-text-color);
+  /* background-color: var(--tg-theme-bg-color);
+  color: var(--tg-theme-text-color); */
   font-family: 'Montserrat', sans-serif;
   min-height: 100vh;
   margin: 0 auto;
