--- a/src/components/ProductItem/ProductItem.css
+++ b/src/components/ProductItem/ProductItem.css
@@ -14,19 +14,24 @@
     border-radius: 16px 16px 10px 10px;
     position: relative;
     overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgb(249,251,251);
+    background: linear-gradient(180deg, rgba(249,251,251,0.4290091036414566) 0%, rgba(0,0,0,0.5298494397759104) 100%);
 }
 .productItem-img img {
-    width: 100%;
-    height: 100%;
+    width: 60%;
+    height: 60%;
     overflow: hidden;
 }
 .productItem-price{
     position: absolute;
-    top: 10px;
-    left: 15px;
-    background-color: #fff;
+    bottom: 5px;
+    right:  15px;
+    /* background-color: #fff; */
     padding: 5px;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     font-size: 12px;
     font-weight: 700;
 }
