--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -42,10 +42,19 @@
 .Cart__item-left{
     flex: 0 1 33.333%;
     height: 100%;
-    max-width: 100px;
-    background-color: chocolate;
-    border: 1px solid #3333;
-    padding: 0 15px;
+    max-width: 100%;
+}
+.Cart__item-img{
+    width: 100%;
+    height: 90px;
+    transform: translateY(-50%);
+    top: 50%;
+    position: relative;
+}
+.Cart__item-left img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 .Cart__item-right{
     padding: 0 15px;
