--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -54,7 +54,7 @@
 .Cart__item-left img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    
 }
 .Cart__item-right{
     padding: 0 15px;
@@ -97,13 +97,11 @@ color:  #010E3880;
 }
 
 .Cart__check{
-    position: sticky;
+    position: fixed;
     bottom: 69px;
-    left: 0;
-    right: 0;
     z-index: 9999999;
     background-color: #ffff;
-    height: 100%;
+    width: 100%;
 }
 
 .Cart__check-row{
@@ -171,4 +169,12 @@ text-align: center;
     font-size: 17px;
     opacity: 50%;
     text-align: center;
+}
+
+.Cart__footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
 }
