--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -10,7 +10,7 @@
 .Cart__main{
     flex: 1 1 auto;
     margin-top: 25px;
-    margin-bottom: 100px;
+    margin-bottom: 130px;
 }
 
 .Cart__item{
@@ -85,15 +85,14 @@ color:  #010E3880;
 
 .Cart__item-button{
     background-color: #ffff;
-    color: #010E38;
-    display: inline-block;
-    padding: 9px 18px;
-    cursor: pointer;
-    border-radius: 30px;
-    border: none;
-    height: 100%;
-    /* font-size: 20px; */
     margin: 0 10px;
+    display: inline-block;
+    height: 3rem;
+    width: 3rem;
+    cursor: pointer;
+    border-radius: 50%;
+    border: none;
+    transition: .3s ease-in;
 }
 
 .Cart__check{
@@ -163,12 +162,14 @@ opacity: 50%;
 .noOrder__title{
 font-size: 28px;
 text-align: center;
+line-height: 35px;
 }
 
 .noOrder__text{
     font-size: 17px;
     opacity: 50%;
     text-align: center;
+    line-height: 25px;
 }
 
 .Cart__footer{
@@ -178,3 +179,4 @@ text-align: center;
     right: 0;
     width: 100%;
 }
+
