--- a/src/components/ProductItem/ProductItem.css
+++ b/src/components/ProductItem/ProductItem.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&family=Raleway&family=Ubuntu&display=swap');
 .productItem{
     border-radius: 16px 16px 32px 32px;
-    box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+    box-shadow: 0px 0px 4px 0px rgba(34, 60, 80, 0.2);
     display: flex;
     flex-direction: column;
     font-family: 'Ubuntu', sans-serif;
@@ -20,13 +20,16 @@
     /* background: linear-gradient(180deg, rgba(249,251,251,0.4290091036414566) 0%, rgba(0,0,0,0.5298494397759104) 100%); */
 }
 .productItem-img img {
-    width: 65%;
-    height: 65%;
+    /* width: 70%;
+    height: 70%; */
+    padding: 1.5rem;
+    max-width: 100%;
+    max-height: 100%;
     overflow: hidden;
 }
 .productItem-price{
     position: absolute;
-    bottom: 5px;
+    bottom: 0px;
     right:  15px;
     /* background-color: #fff; */
     padding: 5px;
