--- a/src/Styles/Global.css
+++ b/src/Styles/Global.css
@@ -16,7 +16,7 @@ input, button, textarea { font-family: inherit; }
 
 input::-ms-clear { display: none; }
 
-button { cursor: pointer; }
+button { cursor: pointer; -webkit-tap-highlight-color: rgba(0,0,0,0); }
 
 button::-moz-focus-inner { padding: 0; border: 0; }
 
