--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -129,7 +129,7 @@ line-height: 33px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 0;
+    padding: 2rem 0;
 }
 
 .main__modal-footer__price{
@@ -154,14 +154,17 @@ line-height: 33px;
     border-radius: 50%;
     border: none;
     transition: .3s ease-in;
+    
 }
+
+
 .main__modal-count{
     font-size: 17px;
     font-weight: 500;
     line-height: 27px;
     text-align: left;
     /* padding: 0 5px; */
-    width: 20px;
+    width: 2rem;
     text-align: center;
     
 }
