--- a/src/components/ConfButton/ConfButton.module.css
+++ b/src/components/ConfButton/ConfButton.module.css
@@ -5,7 +5,8 @@
         width: 100%;
         border-radius: 16px;
         border: none;
-        background-color: #17975C;
+        /* background-color: #17975C; */
+        background-color: #000;
         color: #ffff;
         display: flex;
         align-items: center;
