--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -1,12 +1,14 @@
 .navigation{
     width: 100%;
     height: 70px;
-    background: #F1F1F1;
+    /* background: #F1F1F1; */
+    box-shadow: 0px 0px 2px 2px rgba(34, 60, 80, 0.2);
     z-index: 99;
     position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
+    background-color: #ffffff;
 }
 
 .navigation__container{
