--- a/src/components/ProductItem/ProductItem.css
+++ b/src/components/ProductItem/ProductItem.css
@@ -74,9 +74,11 @@
 }
 .productItem-subtitle{
     font-size: 13px;
+    line-height: 1.5rem;
 }
 .productItem__footer-button{
-    background-color: #E9E9EA;
+    /* background-color: #E9E9EA; */
+    background-color: #000;
     display: inline-block;
     padding: 9px 18px;
     cursor: pointer;
@@ -85,5 +87,6 @@
     height: 100%;
     transition: .3s ease-in;
     width: 100%;
+    color: #fff;
 }
 
