--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -146,10 +146,12 @@ line-height: 33px;
 }
 
 .main__modal-footer__buttons button{
-    background-color: #E9E9EA;
+    /* background-color: #E9E9EA; */
+    background: #000;
+    color: #fff;
     display: inline-block;
-    height: 3rem;
-    width: 3rem;
+    height: 3.5rem;
+    width: 3.5rem;
     cursor: pointer;
     border-radius: 50%;
     border: none;
