--- a/src/pages/Account/Account.css
+++ b/src/pages/Account/Account.css
@@ -1,9 +1,9 @@
 
 .Account{
-    display: flex;
+    /* display: flex;
     flex-direction: column;
+    align-items: center; */
     min-height: 100vh;
-    align-items: center;
     max-width: 100%;
     position: relative;
 }
